# BadApplePiPico

./: .gitmodules  CMakeLists.txt  badapple-testframe.h  badapple-testframe2.h  chain_decode.c  chain_decode.h  consts.h  main.c
lib/st7789/: CmakeLists.txt
lib/st7789/src/: st7789.c
lib/st7789/src/include/pico/: st7789.h
lib/varint/: CMakeLists.txt
lib/varint/src/: varint.c  varint.h
lib/zlib/: CMakeLists.txt
